--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#916eff</color>
-    <color name="purple_500">#3F51B5</color>
-    <color name="purple_700">#303F9F</color>
+    <color name="purple_200">#3D9F8D</color>
+    <color name="purple_500">#405aa5</color>
+    <color name="purple_700">#182a58</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
