--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -85,7 +85,7 @@
                                 android:gravity="center"
                                 android:text="@string/string_download_images"
                                 android:textColor="@color/white"
-                                android:textSize="14dp"
+                                android:textSize="13dp"
                                 android:textStyle="bold" />
 
                             <ImageView
@@ -110,15 +110,13 @@
                         android:paddingEnd="7dp"
                         android:paddingBottom="7dp">
 
-                        <Space
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
 
                         <androidx.cardview.widget.CardView
                             android:id="@+id/card_wallpaper"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="7dp"
+                            android:layout_weight="1"
                             app:cardBackgroundColor="#80FFFFFF"
                             app:cardCornerRadius="15dp"
                             app:cardElevation="0dp"
@@ -237,12 +235,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:drawableEnd="@drawable/ic_info"
-                        android:drawablePadding="7dp"
                         android:gravity="center|right"
                         android:text="@string/string_photo_info"
+                        android:layout_marginRight="10dp"
                         android:textColor="@color/black"
-                        android:textSize="16dp"
+                        android:textSize="18dp"
                         android:textStyle="bold"
                         android:visibility="gone"
                         tools:visibility="visible" />
@@ -528,7 +525,7 @@
                             android:gravity="center_vertical"
                             android:maxLines="1"
                             android:text="instagram"
-                            android:textColor="#B3FFFFFF"
+                            android:textColor="@color/purple_200"
                             android:textSize="11dp"
                             android:visibility="gone"
                             tools:text="instagram"
@@ -561,7 +558,7 @@
                             android:gravity="center_vertical"
                             android:maxLines="1"
                             android:text="Bio"
-                            android:textColor="#B3FFFFFF"
+                            android:textColor="@color/purple_200"
                             android:textSize="11dp"
                             android:visibility="gone"
                             tools:text="Bio"
