--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#3D9F8D</color>
+    <color name="purple_200">#2cac98</color>
     <color name="purple_500">#405aa5</color>
     <color name="purple_700">#182a58</color>
     <color name="teal_200">#FF03DAC5</color>
