--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -167,15 +167,18 @@
             tools:itemCount="10"
             tools:listitem="@layout/item_unsplash_photo" />
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loading_anim_view"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:lottie_autoPlay="true"
             android:layout_centerInParent="true"
-            android:indeterminate="true"
-            android:indeterminateTint="@color/purple_500"
+            app:lottie_colorFilter="@color/purple_200"
+            app:lottie_loop="true"
             android:visibility="gone"
-            tools:visibility="visible" />
+            tools:visibility="visible"
+            app:lottie_rawRes="@raw/loading"
+            app:tint="#fff" />
 
         <TextView
             android:id="@+id/text_view_error"
