--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,7 +19,11 @@
             app:popExitAnim="@anim/to_right"/>
         <action
             android:id="@+id/action_galleryFragment_to_myDownloadFragment"
-            app:destination="@id/myDownloadFragment" />
+            app:destination="@id/myDownloadFragment"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left"/>
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
