--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_menu_download">#E7EBFF</color>
     <color name="color_background_gallery_item">#FFFFFF</color>
-    <color name="color_background_fragments">#EFEFEF</color>
+    <color name="color_background_fragments">#E4E4E4</color>
     <color name="color_background_preview_item">#f1f1f1</color>
     <color name="color_gallery_category_item">#AAAAAA</color>
     <color name="color_background_action_bar">@color/purple_500</color>
