--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp">
+        android:layout_height="110dp">
 
         <ImageView
             android:id="@+id/image_view_banner"
@@ -31,11 +31,6 @@
             android:orientation="vertical"
             android:paddingBottom="16dp">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_logo" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -69,6 +64,13 @@
                     android:text="جستجو"
                     android:textColor="@color/white"
                     android:textSize="16dp" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginLeft="7dp"
+                    android:src="@drawable/ic_logo" />
+
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
